--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,3 @@
-
-
 {
 	"name" : "laravel/laravel",
 	"type" : "project",
@@ -29,9 +27,7 @@
 		"preferred-install" : "dist",
 		"sort-packages" : true
 	},
-	"extra" : {
-		"laravel" : {}
-	},
+	"extra" : {},
 	"autoload" : {
 		"psr-4" : {
 			"App\\" : "app/"
